@@ -5,14 +5,14 @@ use strict;
 
 #load test
 use Test;
-BEGIN { plan tests => 62 };
+BEGIN { plan tests => 63 };
 
 # load modules
 use Astro::ADS::Query;
 use Astro::ADS::Result;
 
 # debugging
-use Data::Dumper;
+#use Data::Dumper;
 
 # T E S T   H A R N E S S --------------------------------------------------
 
@@ -132,7 +132,7 @@ print "Connecting to ADS\n";
 
 # query ADS
 my $next_result = $query2->querydb();
-print Dumper($next_result);
+#print Dumper($next_result);
 
 print "Continuing Tests\n";
 
@@ -144,12 +144,17 @@ print "Continuing Tests\n";
 # should (hopefully) be 0
 ok( 0,  $next_result->sizeof());
 
-
 # set and check the proxy
 $query2->proxy('http://wwwcache.ex.ac.uk:8080/');
 my $proxy_url = $query2->proxy();
 
 ok( $proxy_url , 'http://wwwcache.ex.ac.uk:8080/');
+
+# set and check the proxy
+$query2->timeout(60);
+my $time = $query2->timeout();
+
+ok( $time , 60 );
 
 exit;
 
